--- a/src/pages/2025/awards/index.mdx
+++ b/src/pages/2025/awards/index.mdx
@@ -38,7 +38,7 @@ great submission.
 - Global STEM Service Award
 
 </AwardSquare>
-<AwardSquare title="Chapter Awards" borderColor="border-blue-500" href="#chapter-awards">
+<AwardSquare title="Collegiate Awards" borderColor="border-blue-500" href="#collegiate-awards">
 
 - Chapter of the Year - Group
 - Rookie Chapter of the Year - Group
@@ -90,9 +90,9 @@ info@ostem.org or the individual team responsible for the award._
   />
 </div>
 
-<div className="text-bright-peach font-bold" id="chapter-awards">
+<div className="text-bright-peach font-bold" id="collegiate-awards">
 
-## Chapter Awards
+## Collegiate Awards
 
 </div>
 
