--- a/src/pages/2025/present/request-for-programs.mdx
+++ b/src/pages/2025/present/request-for-programs.mdx
@@ -5,10 +5,12 @@ import { Tab } from '@headlessui/react'
 import Image from "next/future/image";
 
 <SiteLayout title="Requests for Programs" accent="nav-blue">
-
+    
 <picture>
-    <source srcSet="/images/2024/2024_rfp_vertical.png" media='(orientation: portrait)' alt="Graphical timeline explaining the 2024 RFP process. There are four headers titled Review the RFP, Three Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image."/>
-    <img src="/images/2024/2024_rfp_horizontal.png" alt="Graphical timeline explaining the 2024 RFP process. There are four headers titled Review the RFP, Three Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image." className='mx-auto max-h-screen rounded'/>
+{/* 
+* <source srcSet="/images/2025/2025_rfp_vertical.png" media='(orientation: portrait)' alt="Graphical timeline explaining the 2025 RFP process. There are four headers titled Review the RFP, Four Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image."/> 
+*/}
+    <img src="/images/2025/2025_rfp_horizontal.png" alt="Graphical timeline explaining the 2025 RFP process. There are four headers titled Review the RFP, Four Tracks, Timeline, and Submit your App respectively. Details for each of the headers are explained in the text sections below this image." className='mx-auto max-h-screen rounded'/>
 </picture>
 
 <div className="text-nav-blue font-bold">
@@ -21,7 +23,7 @@ oSTEM is now accepting program proposals for the 15th Annual oSTEM Conference.
 
 Successful programs will align with oSTEM’s mission and core values: *integrity, intentionality, respect, passion, and grit*. 
 
-- **Friday, March 1**: Request for Programming Released
+- **Wednesday, March 5**: Request for Programming Released
 - **Friday, May 31**: Deadline for Submissions
 - **End of June**: RFP Decision Notifications
 
@@ -38,7 +40,7 @@ Successful programs will align with oSTEM’s mission and core values: *integrit
 ## 2025 Program Tracks and Updates
 </div>
 
-Based on previous feedback, oSTEM is excited to introduce three tracks for the 2025 Conference: Collegiate, Industry, and Technical Spotlight. Please read a little bit about each track in order to decide which track is best suited for your submission. All submissions are expected to be in workshop format. Workshops are defined as 1-2 speakers presenting on a program topic. *All workshops are expected to be 50 minutes.*
+Based on previous feedback, oSTEM is excited to introduce four tracks for the 2025 Conference: Collegiate, Industry, Government and Community Organizations, and Technical Spotlight. Please read a little bit about each track in order to decide which track is best suited for your submission. All submissions are expected to be in workshop format. Workshops are defined as 1-2 speakers presenting on a program topic. *All workshops are expected to be 50 minutes.*
 
 
 **Collegiate:** This track is focused for individuals who regularly interact with a student population or hold positions that are based in academia. Submissions for this track will be applicable to undergraduate, graduate, and faculty/staff positions in order to build a network of tools and resources to take back to the participant’s home institution. 
@@ -49,7 +51,7 @@ Based on previous feedback, oSTEM is excited to introduce three tracks for the 2
 
 **Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2025 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBTQ+ Population, and Sustainable Engineering.
 
-You can learn more about the three tracks below:
+You can learn more about the four tracks below:
 
 <div>
 <Tab.Group>
@@ -68,20 +70,22 @@ Presentations are required to fall within the following categories:
 2. (2) Addressing Challenges at the Graduate School Level
 3. (3) Owning Your Identity On and Off Campus 
 4. (4) Advancing in Academia
-5. (5) Other Relevant Topics.
+5. (5) Managing Changes in Political Climate or Campus Policy
+6. and (6) Other Relevant Topics.
 
 A description of each submission category is provided below:
 
-**Building Inclusive Spaces on Campus** - Submissions in this category should be from either current students, young professionals that were involved in their oSTEM chapter at college, or current advisors of existing oSTEM Chapters. These sessions will highlight success stories on how to build a community on a college campus. 
+**Building Inclusive Spaces on Campus** - Submissions in this category should be from either current students, young professionals who were involved in their oSTEM chapter at college, or current advisors of existing oSTEM chapters. These sessions will highlight success stories on how to build a community on a college campus.
 
-**Addressing Challenges at the Graduate School Level** - Programs in this category will highlight the pros and cons of continuing education. These programs will highlight the complete lifecycle of graduate studies: applying and deciding if graduate school is right for you, choosing a lab/PI, applying for funding and grants,  budgeting, and how to establish professional relationships before looking for a job post-graduate. 
+**Addressing Challenges at the Graduate School Level** - Programs in this category will highlight the highs and lows of continuing education and explore strategies for success in graduate school. These programs will highlight the complete lifecycle of graduate studies: applying and deciding if graduate school is right for you, choosing a lab/PI, applying for funding and grants, budgeting, and how to establish professional relationships before looking for a job post-graduate.
 
-**Owning Your Identity On and Off Campus** - Programs submitted in this category will describe different lived experiences in order to foster relationships outside the bubble of a college campus resource center. Workshops will explore different identities and how these identities can shape a college experience. These sessions would also encompass navigating difficult conversations with University leadership and how to make effective change on campus.
+**Owning Your Identity On and Off Campus** - Programs submitted in this category will describe different lived experiences in order to foster relationships outside the bubble of a college campus resource center. Workshops will explore different identities and how these identities can shape a college experience. These sessions would also encompass navigating difficult conversations with university leadership and how to make effective change on campus and in the broader community.
 
-**Advancing in Academia** - Submissions will focus on next-steps to take when looking to stay in an academic setting. This may include but is not limited to: choosing a graduate program (PhD, JD, MD, PharmD), looking for a postdoc position, and applying for faculty positions. 
-Other Relevant Topics - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and LGBTQ+ populations in an academic setting. 
+**Advancing in Academia** - Submissions will focus on next-steps to take when looking to stay in an academic setting. This may include but is not limited to: choosing a graduate program (PhD, JD, MD, PharmD), looking for a postdoc position, navigating conferences and workshops, effectively communicating your science, and applying for faculty positions.
 
-**Other Relevant Topics** - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and LGBTQ+ populations in an academic setting. 
+**Managing Changes in Political Climate or Campus Policy** - Workshops in this category will focus on building resilience and skills to adapt to the evolving political landscape and institutional policy changes, especially those impacting the LGBTQ+ and STEM communities. Some potential topics include: developing actionable advocacy plans, ensuring our voices are heard in decision-making processes, and navigating hostile environments.
+
+**Other Relevant Topics** - Interested in presenting something that doesn't fit into one of these categories? That's great! People don't always fit neatly into a box so we don't expect our programs to either. Feel free to submit a program that highlights STEM and LGBTQ+ populations in academic or relevant off-campus settings.
 
 </Tab.Panel>
 <Tab.Panel>
@@ -91,23 +95,24 @@ Other Relevant Topics - Interested in presenting something that doesn’t fit in
 </div>
 
 Presentations are required to fall within the following categories: 
-1. (1) Navigating the change from School to Industry
-2. (2) Developing Skills for Early to Mid-Career Success
-3. (3) Pathways to STEM as a non-STEM professional
+
+1. (1) Navigating the Change from School to Industry
+2. (2) Pathways to STEM as a non-STEM professional
+3. (3) Developing Skills for Early and Mid-Career Success
 4. (4) DEI and Creating Inclusive Spaces at Work
-5. and (5) Other Relevant Topics. 
+5. and (5) Other Relevant Topics
 
 A description of each submission category is provided below:
 
-**Navigating the Change from School to Industry** - Workshops in this category will mainly focus on tangible career building skills, such as interviewing tips, the difference between a resume/CV, managing salary expectations, and developing your personal brand
+**Navigating the Change from School to Industry** - Workshops in this category will mainly focus on tangible career building skills, such as interviewing tips, creating an effective resume/CV, networking, managing salary expectations, and developing your personal brand.
 
-**Developing Skills for Early to Mid-Career Success** - The goal of these sessions is to provide practical advice that will accelerate the development of LGBTQ+ talent in STEM.  Some examples include strategic networking & mentorship, people leadership, analysis of industry trends, and continuing education.
+**Pathways to STEM as a non-STEM professional** - There are a large number of ways to learn new technical skills, but these skills can also be translatable to different STEM fields. Workshops in this category will be from individuals that have either found a passion for STEM and entered from a different field, or have found another way to market their skillset in a different job setting.
 
-**Pathways to STEM as a non-STEM professional** - There are a large number of ways to learn new technical skills, but these skills can also be translatable to different STEM fields. Workshops in this category will be from individuals that have either found a passion for STEM and entered from a different field, or have found another way to market their skillset in a different job setting. 
+**Developing Skills for Early and Mid-Career Success** - The goal of these sessions is to provide practical advice that will accelerate the development of LGBTQ+ talent in STEM. Some examples include strategic networking & mentorship, people leadership, analysis of industry trends, and continuing education.
 
-**DEI and Creating Inclusive Spaces at Work** -  This category highlights successful tips and initiatives that have been enacted at their company. Workshop will talk about best practices in talent acquisition and management, establishing and maintaining employee resource groups (ERGs), and what key factors future employees should be looking for when applying for jobs. 
+**DEI and Creating Inclusive Spaces at Work** - This category highlights successful tips and initiatives that have been enacted at their company. Examples of workshop topics include best practices in talent acquisition and management, establishing and maintaining employee resource groups (ERGs), and what key factors future employees should be looking for when applying for jobs.
 
-**Other Relevant Topics** - Interested in presenting something that doesn’t fit into one of these categories? That’s great! People don’t always fit neatly into a box so we don’t expect our programs to either. Feel free to submit a program that highlights STEM and LGBTQ+ populations in an industry setting.
+**Other Relevant Topics** - Interested in presenting something that doesn't fit into one of these categories? That's great! People don't always fit neatly into a box so we don't expect our programs to either. Feel free to submit a program that highlights STEM and LGBTQ+ populations in an industry setting.
 
 </Tab.Panel>
 
@@ -140,8 +145,6 @@ A description of each submission category is provided below:
 
 </Tab.Panel>
 
-
-
 <Tab.Panel>
 <div className="text-nav-blue font-bold">
 
@@ -150,17 +153,17 @@ A description of each submission category is provided below:
 </div>
 
 Presentations are required to fall within the following categories: 
-1. (1) AI and Machine Learning 
-2. (2) Research Study and Design in LGBTQ+ Populations
-3. (3) Sustainable Engineering 
+1. (1) AI and Machine Learning
+2. (2) Research Study and Design in Diverse Populations
+3. and (3) Solutions for a Sustainable Future
 
 A description of each submission category is provided below:
 
-**AI and Machine Learning** - There is a large push to include AI and Machine Learning across the STEM fields. Understanding how these can be applied to each field may be a daunting task and it is imperative to know the limitations of the technology being used. Programs that are submitted to this topic should be either case studies or an explanation of how big data can be used as a focal point for future studies. This may also include tutorial simulations or resources for individuals to explore beyond the conference.
+**AI and Machine Learning** - There is a large push to include AI and Machine Learning across the STEM fields. Understanding how these can be applied to each field may be a daunting task, and it is imperative to know the limitations of the technology being used. Programs that are submitted to this topic should be either case studies or an explanation of how big data can be used as a focal point for future studies. This may also include tutorial simulations or resources for individuals to explore beyond the conference.
 
-**Research Study and Design in Diverse Populations** - Programs that are submitted in this category will discuss research themes and techniques to ensure that diverse populations are included in study design. Presentations will give practical knowledge on considerations and outcomes of different studies and how they have impacted different historically underrepresented populations and how the next generation of researchers can strive to be better. 
+**Research Study and Design in Diverse Populations** - Programs that are submitted in this category will discuss research themes and techniques to ensure that diverse populations are included in study design. Presentations will give practical knowledge on considerations and outcomes of different studies, how they have impacted different historically underrepresented populations, and how the next generation of researchers can strive to be better.
 
-**Sustainable Engineering** - There is a considerable movement to include sustainable design in future projects. Programs submitted in this topic will highlight how sustainability practices can be used in order to better your organization and highlight key efforts that are ongoing for renewable energy and the future of climate change. 
+**Solutions for a Sustainable Future** - As greenhouse gas concentrations in the atmosphere continue to increase, so does our need to address the changing climate through creative, ambitious solutions. This technical spotlight category aims to highlight work being conducted to design and implement climate solutions, e.g., through geoengineering or community-based adaptation/mitigation solutions. Programs submitted in this topic could additionally highlight how sustainability practices can be used in order to better your organization and key efforts that are ongoing for renewable energy and the future of climate change.
 
 </Tab.Panel>
 </Tab.Panels>
