made requested edits on march 24th 2025

--- a/src/pages/2025/present/request-for-programs.mdx
+++ b/src/pages/2025/present/request-for-programs.mdx
@@ -45,11 +45,11 @@ Based on previous feedback, oSTEM is excited to introduce four tracks for the 20
 
 **Collegiate:** This track is focused for individuals who regularly interact with a student population or hold positions that are based in academia. Submissions for this track will be applicable to undergraduate, graduate, and faculty/staff positions in order to build a network of tools and resources to take back to the participant’s home institution. 
 
-**Industry:** This track aims to engage individuals that are currently in the workforce or are imminently prepared to enter the workforce. Potential workshop topics include how to better. engage your employer, advocate for LGBTQ+ populations during your work day, build career-development skills, or shape your professional brand.
+**Industry:** This track aims to engage individuals that are currently in the workforce or are imminently prepared to enter the workforce. Potential workshop topics include how to better engage your employer, advocate for LGBTQ+ populations during your work day, build career-development skills, or shape your professional brand.
 
-**Government and Community Organizations:**  Programming in this track will focus on the intersections between science and society, Workshops should engage conference attendees who are current employees of or interested in working for nonprofits, community organizations, political thinktanks, and/or local, state, or federal government. Examples of topics for this track include the role of scientists in government agencies, science policy and law, and utilizing science in advocacy work.
+**Government and Community Organizations:**  Programming in this track will focus on the intersections between science and society. Workshops should engage conference attendees who are current employees of or interested in working for nonprofits, community organizations, political thinktanks, and/or local, state, or federal government. Examples of topics for this track include the role of scientists in government agencies, science policy and law, and utilizing science in advocacy work.
 
-**Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2025 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBTQ+ Population, and Sustainable Engineering.
+**Technical Spotlight:** Topics for this track will be extremely focused on the highly technical aspects of the presented topic. Presenters will be professionals who already belong to this field or want to appreciate the intricacies of the field. These submissions are more focused and it is expected that the audience will have foundational knowledge of the topic being discussed. For the 2025 Conference, our programs will focus on AI and Machine Learning, Research and Study Design in LGBTQ+ Population, and Sustainable Engineering.
 
 You can learn more about the four tracks below:
 
