starting updates prior to reg launch
updates on health and safety. new about page

--- a/src/pages/2025/health-and-safety.mdx
+++ b/src/pages/2025/health-and-safety.mdx
@@ -5,7 +5,7 @@ import Image from "next/image";
 
 <SiteLayout title="Community Health & Safety" accent="nav-green">
 <br />
-Last Updated: 01/21/2025
+Last Updated: 04/11/2025
 <div className="font-bold text-nav-green">
 
 ## Community Health is Important!
@@ -68,26 +68,26 @@ Everyone has to do their part to keep oSTEM an inclusive and safe environment fo
 
 </div>
 Protecting yourself from mpox: <br />
-https://www.cdc.gov/poxvirus/mpox/prevention/protect-yourself.html<br /><br />
+https://www.cdc.gov/mpox/prevention/ <br /><br />
 
 Protecting yourself and others from COVID-19:<br />
 https://www.cdc.gov/covid/prevention/index.html<br /><br />
 
 Protecting yourself and others from influenza (flu):<br />
-https://www.cdc.gov/flu/prevent/prevention.htm<br />
+https://www.cdc.gov/flu/prevention/<br />
 
 <div className="text-nav-blue">
 
 ### Sources
 
 </div>
-Centers for Disease Control and Prevention. (2019, October 9). Preventive Steps. Centers for Disease Control and Prevention. https://www.cdc.gov/flu/prevent/prevention.htm <br /><br />
+Centers for Disease Control and Prevention. (2024, August 26). Preventing seasonal flu. Centers for Disease Control and Prevention. https://www.cdc.gov/flu/prevention/ <br /><br />
 
-Centers for Disease Control and Prevention. (2022, October 31). Mpox in the U.S. Centers for Disease Control and Prevention. https://www.cdc.gov/poxvirus/mpox/prevention/protect-yourself.html<br /><br />
+Centers for Disease Control and Prevention. (2024, December 11). Preventing Mpox. Centers for Disease Control and Prevention. https://www.cdc.gov/mpox/prevention/<br /><br />
 
-Centers for Disease Control and Prevention. (2024a, July 12). How to Protect Yourself and Others. COVID-19. https://www.cdc.gov/covid/prevention/index.html<br /><br />
+Centers for Disease Control and Prevention. (2025, March 10). How to Protect Yourself and Others. COVID-19. https://www.cdc.gov/covid/prevention/index.html<br /><br />
 
-Centers for Disease Control and Prevention. (2024b, July 15). Testing for COVID-19. COVID-19. https://www.cdc.gov/covid/testing/index.html<br /><br />
+Centers for Disease Control and Prevention. (2025, March 10). Testing for COVID-19. COVID-19. https://www.cdc.gov/covid/testing/index.html<br /><br />
 
 World Health Organization. (2024, August 14). WHO Director-General declares mpox outbreak a public health emergency of international concern. WHO; World Health Organization. https://www.who.int/news/item/14-08-2024-who-director-general-declares-mpox-outbreak-a-public-health-emergency-of-international-concern
 
