--- a/src/pages/2025/attend/about.mdx
+++ b/src/pages/2025/attend/about.mdx
@@ -15,10 +15,11 @@ import Image from "next/image";
       <li><a href="#workshops" className="text-nav-green hover:underline">Workshops & Panels</a></li>
       <li><a href="#keynotes" className="text-nav-green hover:underline">Keynote Speakers & Awards Ceremony</a></li>
       <li><a href="#expo" className="text-nav-green hover:underline">Career and Graduate Expo</a></li>
-      <li><a href="#posters" className="text-nav-green hover:underline">Research Posters and Tech Talks</a></li>
+      <li><a href="#posters" className="text-nav-green hover:underline">Research Posters and Research Talks</a></li>
     </ul>
     <ul className="space-y-2">
       <li><a href="#networking" className="text-nav-green hover:underline">Networking Events</a></li>
+      <li><a href="#resources" className="text-nav-green hover:underline">On-Site Resources</a></li>
       <li><a href="#ticketed-programs" className="text-nav-green hover:underline">Ticketed Programs</a></li>
       <li><a href="#pre-conference" className="text-nav-green hover:underline">Pre-Conference Programs</a></li>
     </ul>
@@ -55,10 +56,10 @@ import Image from "next/image";
 </div>
 
 <div>
-  <h2 id="posters" className="text-nav-green font-bold">Research Posters and Tech Talks</h2>
+  <h2 id="posters" className="text-nav-green font-bold">Research Posters and Research Talks</h2>
   <div className="bg-primary rounded p-4 pb-6">
     <p>
-      Discover groundbreaking ideas and innovative projects from students and professionals alike. The <strong>Poster and Tech Talk</strong> sessions offer a platform to share research, spark discussion, and gain valuable feedback in a supportive, curious, and collaborative space.
+      Discover groundbreaking ideas and innovative projects from students and professionals alike. The <strong>Poster and Research Talk</strong> sessions offer a platform to share research, spark discussion, and gain valuable feedback in a supportive, curious, and collaborative space.
     </p>
     <p>
       <em>Want to present your research? Check out our Request for Posters!</em>
@@ -78,12 +79,23 @@ import Image from "next/image";
     </p>
   </div>
 </div>
+<div>
+  <h2 id="resources" className="text-nav-green font-bold">On-Site Resources</h2>
+  <div className="bg-primary rounded p-4 pb-6">
+    <p>
+      Our mental health partner <strong>Thrive Lifeline</strong> joins us for another year
+    </p>
+    <p>
+      <strong>oSTEM Closet</strong>
+    </p>
+  </div>
+</div>
 
 <div>
   <h2 id="ticketed-programs" className="text-nav-green font-bold">Ticketed Programs</h2>
   <div className="bg-primary rounded p-4 pb-6">
     <p>
-      Celebrate the oSTEM community in style at our <strong>annual Gala</strong>—an evening of connection, inspiration, and recognition. This ticketed event features light refreshments, entertainment, and special moments honoring the achievements of our members and allies. It’s a chance to dress up, reflect, and celebrate together.
+      Celebrate the oSTEM community in style at our <strong>annual Gala</strong>—an evening of connection, inspiration, and recognition. This ticketed event features light refreshments, entertainment, dancing, and special moments honoring the achievements of our members and allies. It’s a chance to dress up, reflect, and celebrate together.
     </p>
   </div>
 </div>
