--- a/src/pages/2025/attend/resources.mdx
+++ b/src/pages/2025/attend/resources.mdx
@@ -160,7 +160,7 @@ Baltimore, MD, 21202</span>
 
 For general accessibility questions, please email our accessibility team at access@ostem.org.
 
-During online registration we ask what accomodations you need. We aim to fulfill all reasonable accomodations requested by **August 31st**; after that date, we will do what we can but our ability to fulfill accomodations may be more limited. You can also email us for inquiries into accomodations.
+During online registration we ask what accommodations you need. We aim to fulfill all reasonable accommodations requested by **August 31st**; after that date, we will do what we can but our ability to fulfill accommodations may be more limited. You can also email us for inquiries into accommodations.
 
 For additional accessibility information available at the convention center, please visit https://www.bccenter.org/p/about/faqs.
 
