--- a/src/pages/2025/attend/resources.mdx
+++ b/src/pages/2025/attend/resources.mdx
@@ -98,13 +98,16 @@ Baltimore, MD, 21202</span>
 <br/>(1 block to BCC, 2 blocks to Light Rail)
 <br/>$225 per Night plus taxes and fees</p>
 
-<span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span>
-<br/>
-
-
+<!-- <span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span>
 <p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
   Coming Soon!
-</p>
+</p> -->
+<br/>
+<a href=" https://www.hyatt.com/en-US/group-booking/BWIRB/G-OSTE" rel="noopener noreferrer" target='_blank' 
+class="inline-block mt-4 px-3 py-1.5 bg-red-600 text-white shadow hover:bg-red-700 transition-colors duration-200 dark:bg-red-500 dark:hover:bg-red-600"
+>
+  Hyatt Booking Website
+</a>
 
 
 
@@ -139,13 +142,15 @@ Baltimore, MD, 21202</span>
 <br/>$229 per Night plus taxes and fees</p>
 
 
-<span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span>
+<!-- <span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span> -->
 <br/>
 
 
-<p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
-  Coming Soon!
-</p>
+<a href="https://book.passkey.com/e/50953259" rel="noopener noreferrer" target='_blank' 
+class="inline-block mt-4 px-3 py-1.5 bg-indigo-600 text-white shadow hover:bg-indigo-700 transition-colors duration-200 dark:bg-indigo-500 dark:hover:bg-indigo-600"
+>
+  Sheraton Booking Website
+</a>
 
 </div>
 </div>
@@ -178,7 +183,7 @@ The following resources are third-party resources and are not affiliated or spon
 
 - **Visit Baltimore** is a hub of information for all things Baltimore. Check out their Charm City Passport for discounts!  For more info, please visit https://baltimore.org/guides/an-lgbtq-guide-to-baltimore/.
 
-- **Baltimore Beat** is is a Black-led, Black-controlled nonprofit newspaper and media outlet. Check out their stories to learn about life in Baltimore.  Check out their Calendars to see events happening during conference weekend! Check out their Charm City Passport for discounts!  For more info, please visit https://baltimorebeat.com/.
+- **Baltimore Beat** is is a Black-led, Black-controlled nonprofit newspaper and media outlet. Check out their stories to learn about life in Baltimore.  Check out their Calendars to see events happening during conference weekend! For more info, please visit https://baltimorebeat.com/.
 
 
 <br/>
