--- a/src/pages/2025/attend/about.mdx
+++ b/src/pages/2025/attend/about.mdx
@@ -32,7 +32,7 @@ import Image from "next/image";
   <h2 id="workshops" className="text-nav-green font-bold">Workshops & Panels</h2>
   <div className="bg-primary rounded p-4 pb-6">
     <p>
-      Dive into engaging sessions led by experts across STEM fields, covering topics from technical skills and emerging research to leadership, identity, and navigating the academic and professional worlds. With a mix of interactive <strong>Workshops</strong> and thought-provoking <strong>Panels</strong>, there's something for every interest and career stage.
+      Join engaging sessions led by passionate speakers and experts across STEM fields, covering topics from technical skills and emerging research to leadership, identity, and navigating the academic and professional worlds. With a mix of interactive <strong>Workshops</strong> and <strong>Panels</strong>, there's something for every interest and career stage.
     </p>
   </div>
 </div>
@@ -72,10 +72,10 @@ import Image from "next/image";
   <h2 id="networking" className="text-nav-green font-bold">Networking Events</h2>
   <div className="bg-primary rounded p-4 pb-6">
     <p>
-      <strong>Sponsored networking events</strong> connect attendees with researchers and professionals across STEM fields in a casual, welcoming environment, offering the chance to build meaningful connections beyond the conference sessions.
+      <strong>Sponsored networking events</strong> connect attendees with researchers and professionals across STEM fields in a casual, welcoming environment, offering the chance to build meaningful connections.
     </p>
     <p>
-      <strong>oSTEM-hosted social events</strong>—including mixers, games, and community-building activities—bring attendees together in fun, relaxed settings open to everyone, helping turn new faces into future collaborators and friends.
+      Attend <strong>oSTEM-hosted social events</strong>—including mixers, games, and community-building activities—bring attendees together in fun, relaxed settings open to everyone, helping turn new faces into future collaborators and friends.
     </p>
   </div>
 </div>
@@ -83,10 +83,10 @@ import Image from "next/image";
   <h2 id="resources" className="text-nav-green font-bold">On-Site Resources</h2>
   <div className="bg-primary rounded p-4 pb-6">
     <p>
-      Our mental health partner <strong>Thrive Lifeline</strong> joins us for another year
+      Supporting virtually year-round and in-person during conference weekend, eur mental health partner <strong>Thrive Lifeline</strong> joins us for another year. Check out some of their resouces: (link)
     </p>
     <p>
-      <strong>oSTEM Closet</strong>
+      Something borrowed; something blue; stop by the <strong>oSTEM Closet</strong> to find something new! Do you have professional attire? Look up for future information about donation to the oSTEM Closet.
     </p>
   </div>
 </div>
@@ -107,7 +107,7 @@ import Image from "next/image";
       <strong>Allyship in Motion</strong> is a training program focused on learning best practices for creating inclusive environments and recruiting LGBTQ+ individuals in STEM fields. This event is exclusive to oSTEM sponsors and partners.  Reach out to <a href="mailto:sponsorship@oSTEM.org" className="text-nav-green hover:underline">sponsorship@oSTEM.org</a> for more info.
     </p>
     <p>
-      <strong>The Gender Affirmation Symposium</strong> centers the experiences, needs, and voices of trans, nonbinary, and gender-diverse individuals in STEM. This dedicated space offers panels and discussions focused on affirmation, advocacy, and navigating STEM environments with authenticity. Open to all, the symposium fosters education, allyship, and community support.
+      <strong>The Gender Affirmation Symposium</strong> centers the experiences, needs, and voices of trans, nonbinary, and gender-diverse individuals in STEM. This dedicated space offers panels and discussions focused on affirmation, advocacy, and navigating STEM environments with authenticity. Denote interest in attending during registration to received more information on how to attend.
     </p>
   </div>
 </div>
