--- a/src/pages/2025/attend/about.mdx
+++ b/src/pages/2025/attend/about.mdx
@@ -10,10 +10,10 @@ import Image from "next/image";
 
 <div className="mb-8">
   <h2 className="text-nav-green font-bold text-2xl mb-4">Table of Contents</h2>
-  <div className="grid grid-cols-2 gap-4">
+  <div className="grid grid-cols-1 sm:grid-cols-2 gap-4">
     <ul className="space-y-2">
       <li><a href="#workshops" className="text-nav-green hover:underline">Workshops & Panels</a></li>
-      <li><a href="#keynotes" className="text-nav-green hover:underline">Keynote Speakers & Awards Ceremony</a></li>
+      <li><a href="#keynotes" className="text-nav-green hover:underline">Keynote Speakers & Awards Ceremonies</a></li>
       <li><a href="#expo" className="text-nav-green hover:underline">Career and Graduate Expo</a></li>
       <li><a href="#posters" className="text-nav-green hover:underline">Research Posters and Research Talks</a></li>
     </ul>
@@ -38,10 +38,10 @@ import Image from "next/image";
 </div>
 
 <div>
-  <h2 id="keynotes" className="text-nav-green font-bold">Keynote Speakers & Awards Ceremony</h2>
+  <h2 id="keynotes" className="text-nav-green font-bold">Keynote Speakers & Awards Ceremonies</h2>
   <div className="bg-primary rounded p-4 pb-6">
     <p>
-      Be inspired by <strong>Keynote Speakers</strong> who are trailblazers in STEM and champions of inclusion. The <strong>Awards Ceremony</strong> honors outstanding individuals and organizations making a difference in the LGBTQ+ STEM community—celebrating excellence, resilience, and impact.
+      Be inspired by <strong>Keynote Speakers</strong> who are trailblazers in STEM and champions of inclusion. The <strong>Awards Ceremonies</strong> honors outstanding individuals and organizations making a difference in the LGBTQ+ STEM community—celebrating excellence, resilience, and impact.
     </p>
   </div>
 </div>
@@ -83,10 +83,10 @@ import Image from "next/image";
   <h2 id="resources" className="text-nav-green font-bold">On-Site Resources</h2>
   <div className="bg-primary rounded p-4 pb-6">
     <p>
-      Supporting virtually year-round and in-person during conference weekend, eur mental health partner <strong>Thrive Lifeline</strong> joins us for another year. Check out some of their resouces: (link)
+      Supporting virtually year-round and in-person during conference weekend, your mental health partner <strong>Thrive Lifeline</strong> joins us for another year. Check out some of their resouces: (link)
     </p>
     <p>
-      Something borrowed; something blue; stop by the <strong>oSTEM Closet</strong> to find something new! Do you have professional attire? Look up for future information about donation to the oSTEM Closet.
+      Something borrowed; something blue; stop by the <strong>oSTEM Closet</strong> to find something new! Do you have professional attire? Look out for future information about donation to the oSTEM Closet.
     </p>
   </div>
 </div>
@@ -107,8 +107,9 @@ import Image from "next/image";
       <strong>Allyship in Motion</strong> is a training program focused on learning best practices for creating inclusive environments and recruiting LGBTQ+ individuals in STEM fields. This event is exclusive to oSTEM sponsors and partners.  Reach out to <a href="mailto:sponsorship@oSTEM.org" className="text-nav-green hover:underline">sponsorship@oSTEM.org</a> for more info.
     </p>
     <p>
-      <strong>The Gender Affirmation Symposium</strong> centers the experiences, needs, and voices of trans, nonbinary, and gender-diverse individuals in STEM. This dedicated space offers panels and discussions focused on affirmation, advocacy, and navigating STEM environments with authenticity. Denote interest in attending during registration to received more information on how to attend.
-    </p>
+      The<strong> Gender Affirmation Symposium</strong> centers the experiences, needs, and voices of trans, nonbinary, and gender-diverse individuals in STEM. This dedicated space offers panels and discussions focused on affirmation, advocacy, and navigating STEM environments with authenticity. Open to members of the trans, nonbinary, gender-diverse, and questioning communities, the symposium fosters education, allyship, and community support.
+      
+      </p>
   </div>
 </div>
 
