--- a/src/pages/2025/attend/schedule.mdx
+++ b/src/pages/2025/attend/schedule.mdx
@@ -7,9 +7,10 @@ import Image from "next/image";
 <SiteLayout title="Schedule" accent="nav-green">
 <br />
 
+<!-- UNCOMMENT LATER WITH WHOVA
 <div className="font-bold text-nav-green">
 
-## 2024 Detailed Conference Schedule
+## 2025 Detailed Conference Schedule
 
 </div>
 
@@ -20,6 +21,68 @@ However, you can get additional features with an account such as speaker bios, Q
 <br/>
 <CTAButton onClick="https://whova.com/embedded/event/cypiDSEfdD%40nXxOYQE1b7xiYdhJ46gzGRVlb1sE9eGc%3D" backgroundColor="ostem-blue" target='_blank'>View Detailed Schedule</CTAButton>
 <br/><br/>
+-->
+
+<div className="font-bold text-nav-green">
+
+## 2025 High-Level Conference Schedule
+
+</div>
+
+Times and events listed below are <strong>subject to change</strong>. <!--For the most up-to-date schedule, please see the detailed conference schedule linked above.-->
+
+<div className="text-teal-700 dark:text-teal-300">
+
+### Thursday - October - 16
+
+</div>
+
+- **8:00 AM:** Registration Desk / Help Desk opens
+- **9:00 AM - 12:00 PM:** Pre-Conference Programs
+- **11:30 AM - 1:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> OAC Meeting
+- **1:00 PM - 1:40 PM:** New to the Conference Session
+- **2:00 PM - 5:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
+- **2:00 PM - 5:00 PM:** Specialty Workshop Blocks
+- **7:00 PM - 8:00 PM:** Membership Mixers
+
+<div className="text-nav-blue">
+
+### Friday - October - 17
+
+</div>
+
+- **8:00 AM:** Registration Desk / Help Desk opens
+- **8:30 AM - 9:30 AM:** Breakfast Plenary
+- **9:00 AM - 12:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
+- **9:45 AM - 10:45 AM:** Workshop Block 1
+- **10:00 AM - 12:00 PM:** Career and Graduate Expo Success Clinic
+- **10:00 AM - 6:00 PM:** oSTEM Closet
+- **11:00 AM - 12:00 PM:** Workshop Block 2
+- **12:00 PM - 3:00 PM:** Career and Graduate School Expo
+- **3:00 PM - 4:00 PM:** Workshop Block 3
+- **4:15 PM - 5:00 PM:** Evening Plenary
+- **6:30 PM - 8:00 PM:** Sponsored Networking Sessions
+- **8:00 PM - 10:00 PM:** oSTEM Social
+
+<div className="text-indigo-700 dark:text-indigo-300">
+
+### Saturday - October - 18
+
+</div>
+
+- **8:00 AM:** Registration Desk / Help Desk opens
+- **8:00 AM:** Poster Room opens
+- **9:00 AM - 10:00 AM:** Workshop Block 4
+- **10:00 AM - 1:00 PM:** Career and Graduate School Expo
+- **10:00 AM - 4:00 PM:** oSTEM Closet: Step Out in Style
+- **1:00 PM - 2:00 PM:** Poster Presentation Group 1
+- **2:00 PM - 3:00 PM:** Poster Presentation Group 2
+- **2:30 PM - 3:30 PM:** Workshop Block 5
+- **3:45 PM - 4:45 PM:** Workshop Block 6
+- **5:00 PM - 6:15 PM:** Closing Plenary
+- **8:00 PM - 9:30 PM:** <TextBadge className='border-nav-blue text-nav-blue'>Add-On</TextBadge> oSTEM Gala**  
+  **oSTEM Gala tickets are a paid add-on during registration.
+
 
 
 <div className="font-bold text-nav-green">
