--- a/src/pages/2025/attend/resources.mdx
+++ b/src/pages/2025/attend/resources.mdx
@@ -162,12 +162,11 @@ class="inline-block mt-4 px-3 py-1.5 bg-indigo-600 text-white shadow hover:bg-in
 ## Conference Accessibility
 
 </div>
+For general accessibility questions, please email our accessibility team at <a href="mailto:access@ostem.org">access@ostem.org</a>.
 
-For general accessibility questions, please email our accessibility team at access@ostem.org.
+During online registration we ask what accommodations you need. We aim to fulfill all reasonable accommodations requested by **August 31st**; after that date, we will do what we can but our ability to fulfill accommodations may be more limited. You can also email us for inquiries into accommodations.
 
-During online registration we ask what accommodations you need. We aim to fulfill all reasonable accommodations requested by **August 31st**; after that date, we will do what we can but our ability to fulfill accommodations may be more limited. You can also email us for inquiries into accommodations.
-
-For additional accessibility information available at the convention center, please visit https://www.bccenter.org/p/about/faqs.
+For additional accessibility information available at the convention center, please visit https://www.bccenter.org/p/about/faqs.
 
 <br/>
 
