updates updates mostly registration page

--- a/src/pages/2025/attend/registration.mdx
+++ b/src/pages/2025/attend/registration.mdx
@@ -103,7 +103,8 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 <br/>
 
 <h4>oSTEM Gala</h4>
-<p>Join us for Gala, the perfect way to round off the conference. This is your chance to celebrate the weekend, the connections you've made and the achievements of our community throughout the year, complete with dinner and entertainment.</p>
+<p><strong>Join us for the Gala — the perfect way to round off the conference!</strong></p>
+<p>This year’s Gala will feature light refreshments, music and dancing, space to connect with fellow attendees, and a special recognition of members of the oSTEM community. It's your chance to celebrate the weekend, the connections you've made, and the achievements of our community throughout the year.</p>
 <ul>
   <li>Gala tickets are an optional, paid add-on - they are <b className='text-nav-pink'>not included</b> with your conference pass. Each attendee needs their own add-on ticket.</li>
   <li>Gala is on Saturday night. Please refer to <a href='schedule'>our high-level schedule</a> for more details.</li>
@@ -114,9 +115,9 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 
 Conference Refund & Transfer Policy:
 
-- **Partial Refund Deadlines: **Attendees who cancel their registration by September 19th will receive a partial refund of 75% of the registration fee (not including fees imposed by Whova). Attendees who cancel their registration by midnight PT September 30th will receive a partial refund of 50% of the registration fee (not including fees imposed by Whova). Requests for partial refunds must be submitted in writing to conference@ostem.org.
-- **No Refund Deadline: **No refunds will be issued for cancellations made after September 30th or for no-shows at the conference.
-- **Transfer Policy: **If you are unable to attend the conference, you may transfer your registration to another person. Substitution requests must be submitted in writing to conference@ostem.org by October 4, 2024
+- **Partial Refund Deadlines: **Attendees who cancel their registration by September 19th will receive a partial refund of 75% of the registration fee (not including fees imposed by Whova). Attendees who cancel their registration by midnight PT September 26th will receive a partial refund of 50% of the registration fee (not including fees imposed by Whova). Requests for partial refunds must be submitted in writing to conference@ostem.org.
+- **No Refund Deadline: **No refunds will be issued for cancellations made after September 26th or for no-shows at the conference.
+- **Transfer Policy: **If you are unable to attend the conference, you may transfer your registration to another person. Substitution requests must be submitted in writing to conference@ostem.org by October 3, 2025
 
 <br/>
 <h4>Additional Information</h4>
@@ -135,7 +136,7 @@ Conference Refund & Transfer Policy:
 If you are registering as part of your company's exhibitor/sponsorship package, you should receive instructions from your company's conference contact. They will be given a private Whova link and promo code for the company's representatives to redeem their pre-paid registrations. If you have questions, please contact sponsorship@ostem.org.
 
 #### What if I miss the online deadline? Will there be on-site registration?
-If you miss the online registration deadline (September 30), you will be able to register on-site. Please note that on-site registration will be more expensive than online prices, will not include any meals, and will only have limited accomodations available.
+If you miss the online registration deadline (September 26), you will be able to register on-site. Please note that on-site registration will be more expensive than online prices, will not include any meals, and will only have limited accomodations available.
 
 No exceptions will be made for online registration after the deadline. There is no "late" online registration option this year.
 
@@ -143,7 +144,7 @@ No exceptions will be made for online registration after the deadline. There is 
 Yes, oSTEM members get a discounted rate. Furthermore, the member discount stacks with the early-bird discount allowing you to save more if you purchase your ticket by June 30.
 
 #### I submitted a RFP/RFPT. When should I register?
-Attendees with an accepted [Request for Programs (RFP)](/2024/present/request-for-programs) or [Request for Panel Topics (RFPT)](/2024/present/request-for-panel-topics) submission will receive a 50% registration discount\* on their conference pass. As such, you should hold off registration until you hear whether your submission was accepted or not.
+Attendees with an accepted [Request for Programs (RFP)](/2025/present/request-for-programs) or [Request for Panel Topics (RFPT)](/2025/present/request-for-panel-topics) submission will receive a 50% registration discount\* on their conference pass. As such, you should hold off registration until you hear whether your submission was accepted or not.
 
 \* There is a limit on how many discounted tickets you can purchase. Please view the respective RFP and RFPT pages for more information.
 
